updated team. updated fontawesome. fixed unwanted behaviour on small screens

--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -1017,6 +1017,7 @@ pre code {
     flex-wrap: wrap;
     align-items: stretch;
 }
+/* Change the percentage to state how many team members should be in one row. 20% = 5, 25% = 4 etc. */
 .flexme > .item {
     flex: 0 1 20%;
 }
@@ -1153,6 +1154,35 @@ pre code {
   .flexfunding > .item {
       flex: 1 0 50%;
       min-width: 220px;
+  }
+  .downloads .list-horizontal .li-version {
+    width: auto;
+    flex-direction: row;
+  }
+  .downloads .list-horizontal .li-version a {
+    line-height: 36px;
+    padding-left: 1em;
+  }
+  .downloads .list-horizontal {
+    display: block;
+  }
+  .downloads .list-horizontal .li-download {
+    width: auto;
+  }
+  .downloads .list-horizontal .li-os {
+    width: auto;
+    text-align: center;
+  }
+  .downloads .list-horizontal .li-icon {
+    width: auto;
+  }
+  .promo .circle {
+    width: 100px;
+    height: 100px;
+  }
+  .promo .circle img{
+    width: 100px;
+    height: 100px;
   }
 }
 /* Small devices (tablets, 768px and up) */
